--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <!-- data theme https://daisyui.com/docs/themes/ -->
 <html lang="en" data-theme="light">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RMS</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RMS</title>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <!-- SEO -->
+  <meta name="description" content="RMS - ระบบจัดการหอพักเพื่อลดความผิดพลาดในการจัดการ ใช้งานฟรี " />
+  <meta name="keywords" content="RMS, Resident Management System, จัดการหอพัก, ฟรี, จัดการหอพักฟรี" />
+  <meta name="author" content="RMS" />
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
