--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
   <meta name="description" content="RMS - ระบบจัดการหอพักเพื่อลดความผิดพลาดในการจัดการ ใช้งานฟรี " />
   <meta name="keywords" content="RMS, Resident Management System, จัดการหอพัก, ฟรี, จัดการหอพักฟรี" />
   <meta name="author" content="RMS" />
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <!-- XFO -->
+  <meta http-equiv="X-Frame-Options" content="DENY" />
+  <!-- REF POLICY-->
+  <meta http-equiv="Referrer-Policy" content="no-referrer" />
 </head>
 
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
 </body>
 
 </html>
