--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
   <meta name="description" content="RMS - ระบบจัดการหอพักเพื่อลดความผิดพลาดในการจัดการ ใช้งานฟรี " />
   <meta name="keywords" content="RMS, Resident Management System, จัดการหอพัก, ฟรี, จัดการหอพักฟรี" />
   <meta name="author" content="RMS" />
+
   <!-- XFO -->
   <meta http-equiv="X-Frame-Options" content="DENY" />
+  
   <!-- REF POLICY-->
   <meta http-equiv="Referrer-Policy" content="no-referrer" />
+
+  <!-- Content Security Policy (CSP)  -->
+  <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self';" /> -->
 </head>
 
 <body>
