--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
   <meta name="author" content="RMS" />
 
   <!-- XFO -->
-  <meta http-equiv="X-Frame-Options" content="DENY" />
-  
+  <!-- <meta http-equiv="X-Frame-Options" content="DENY" /> -->
+  <!-- frame-ancestors -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none'" /> -->
+
+  <!-- X-XSS-Protection -->
+  <!-- <meta http-equiv="X-XSS-Protection" content="1; mode=block" /> -->
+
   <!-- REF POLICY-->
-  <meta http-equiv="Referrer-Policy" content="no-referrer" />
+  <!-- <meta http-equiv="Referrer-Policy" content="no-referrer" /> -->
 
   <!-- Content Security Policy (CSP)  -->
   <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
